--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "framekit"
 version = "0.1.0"
@@ -12,3 +16,6 @@ dependencies = [
     "mutagen",
     "librosa",
 ]
+
+[tool.setuptools]
+packages = ["framekit"]
